packages/kyvernoPolicies/chart/tests/mpol/add-default-securitycontext-cel/chainsaw-test/pod-bare.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bare-pod
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
