packages/kyvernoPolicies/chart/tests/mpol/add-default-securitycontext-cel/chainsaw-test/pod-preset.yaml
apiVersion: v1
kind: Pod
metadata:
  name: preset-pod
spec:
  restartPolicy: Never
  terminationGracePeriodSeconds: 0
  securityContext:
    runAsNonRoot: false
    runAsUser: 1000
    runAsGroup: 2000
    fsGroup: 3000
  containers:
    - name: test
      image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
      command: ["true"]
